colang-cli/tests/samples/features/traits/compile_error/no_method_implementation.co
trait Foo {
  fun bar(self, x: int): int
}

struct FooImpl : Foo { }

fun main() { }
